infrastructure/base/kiali-operator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiali-operator
  labels:
    toolkit.fluxcd.io/tenant: sre-team
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
